<resources>
    <string name="app_name">Monage</string>
    <string name="nombre">Nombre</string>
    <string name="username">Username</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="registro">Registro</string>
    <string name="sesion">Iniciar sesion</string>
    <string name="cuenta">Crear cuenta</string>
    <string name="registrar">Registrarse</string>
    <string name="enviar">Enviar</string>
    <string name="inversion">Inversiones</string>
    <string name="utilidades">Utilidades</string>
    <string name="inverdispo">Inversiones disponibles</string>
    <string name="dineroinver">Dinero invertido en acciones</string>
    <string name="pedirecu">Pedir recursos</string>
    <string name="pedir">Pedir</string>
    <string name="volver">Volver</string>
    <string name="comida">Comida</string>
    <string name="higiene">Higiene</string>
    <string name="diversion">Diversion</string>
</resources>